--- a/week1/portfolio.html
+++ b/week1/portfolio.html
@@ -44,7 +44,7 @@
           </tr>
           <tr>
             <td>Personal Portfolio Project</td>
-            <td>In Progress</td>
+            <td>In Progresssss</td>
           </tr>
         </tbody>
       </table>
