--- a/week2/position.html
+++ b/week2/position.html
@@ -14,7 +14,7 @@
         <div class="normal-box">Normal Box</div>
         </div>
 
-        <div class=""parent-relative">
+        <div class="parent-relative">
             
             <div class="absolute-box">Aboslute Box (corner)</div>
             <div class="absolute-box2">Aboslute Box (corner)</div>
