--- a/week1/portfolio/index.html
+++ b/week1/portfolio/index.html
@@ -10,8 +10,8 @@
       <h1>personal portfolio</h1>
       <nav>
         <a href="./">Home</a>
-        <a href="./projects.html"></a>
-        <a href="./contact.html"></a>
+        <a href="./projects.html">Projects</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </header>
     <hr />
