--- a/week1/portfolio/contact.html
+++ b/week1/portfolio/contact.html
@@ -23,13 +23,13 @@
             <fieldset>
                 <legend>Your Details</legend>
                 <label for="name">Your Name</label>
-                <input type="text" id="name">
+                <input type="text" id="name" required>
                 <br>
                 <label for="email">Your Email</label>
-                <input type="email" id="email">
+                <input type="email" id="email" required>
                 <br>
                 <label for="phone">Your Phone</label>
-                <input type="tel" id="phone">
+                <input type="tel" id="phone" required>
             </fieldset>
             <fieldset>
                 <legend>Your Message</legend>
