--- a/week1/portfolio/contact.html
+++ b/week1/portfolio/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ismail Web Developer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon"type href="logo.png">
 </head>
 <body>
     <header>
