--- a/week2/Resturant-website2/index.html
+++ b/week2/Resturant-website2/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <div class="logo">Ismail Resturant</div>
                 <div class="nav-links">
-                    <a href="#home">HOME</a>
+                    <a href="./">HOME</a>
                     <a href="./Menu.html">MENU</a>
                     <a href="./contact.html">CONTACT</a>
                 </div>
