--- a/week2/Resturant-website2/contact.html
+++ b/week2/Resturant-website2/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <link rel="stylesheet" href="./stylee.css"
+    <link rel="stylesheet" href="./stylee.css" />
   </head>
   <body>
     <nav>
       <div class="logo">Ismail Resturant</div>
       <div class="nav-links">
-        <a href="./restaurant.html">HOME</a>
+        <a href="./">HOME</a>
         <a href="./Menu.html">MENU</a>
         <a href="./contact.html">CONTACT</a>
       </div>
