--- a/week2/Resturant-website2/index.html
+++ b/week2/Resturant-website2/index.html
@@ -30,7 +30,7 @@
 
     </section>
     <footer>
-        <p>&copy; 2025 Ismail Restaurant Jamshoro. All rights reserved.</p>
+        <p>&copy; 2025 Ismail Restaurant paris. All rights reserved.</p>
     </footer>
 
 </body>
