--- a/week1/portfolio/index.html
+++ b/week1/portfolio/index.html
@@ -20,7 +20,7 @@
     <main>
       <section>
         <h2>About Me</h2>
-      <img src="picc.jpeg" height="100px" width="100px" />
+      <img src="./pic78.jpg" height="120px" width="120px" />
       <p>
         I am a dedicated individual student currently enrolled in the people Information 
         Technology Program (PITP), specializing in Web Developnment. This portfolio serves 
