--- a/week1/portfolio/projects.html
+++ b/week1/portfolio/projects.html
@@ -11,9 +11,9 @@
     <header>
         <h1>Ismail's Portfolio</h1>
         <nav>
-            <a href="./">Home</a>
-            <a href="./projects.html">Projects</a>
-            <a href="./contact.html">Contact</a>
+            </li><a href="./">Home</a>
+            </li><a href="./projects.html">Projects</a>
+            </li><a href="./contact.html">Contact</a>
         </nav>
         <hr>
     </header>
@@ -21,9 +21,9 @@
         <h1>My Projects</h1>
         <p>Projects Index</p>
         <ul>
-            <li><a href="#project-1">HTML Foundations</a></li>
-            <li><a href="#project-2">CSS Styling</a></li>
-            <li><a href="#project-3">JavaScript Implementation</a></li>
+            <a href="#project-1">HTML Foundations</a></li>
+            <a href="#project-2">CSS Styling</a></li>
+            <a href="#project-3">JavaScript Implementation</a></li>
         </ul>
         <hr>
         <section id="project-1">
