--- a/week3/fortune-teller/index.html
+++ b/week3/fortune-teller/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fortune-teller</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico.jpeg">
 </head>
 <body>
     <div class="container">
