--- a/week1/portfolio/contact.html
+++ b/week1/portfolio/contact.html
@@ -11,12 +11,14 @@
     <header>
         <h1>Ismail's Portfolio</h1>
         <nav>
-            <a href="./">Home</a>
-            <a href="./projects.html">Projects</a>
-            <a href="./contact.html">Contact</a>
+            <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            </ul>
         </nav>
-        <hr>
     </header>
+    <hr />
     <main>
         <h2>Contact</h2>
         <p>Please use the form below to contact me</p>
