--- a/week1/portfolio/index.html
+++ b/week1/portfolio/index.html
@@ -11,9 +11,11 @@
     <header>
       <h1>personal portfolio</h1>
       <nav>
-        <a href="./">Home</a>
-        <a href="./projects.html">Projects</a>
-        <a href="./contact.html">Contact</a>
+        <ul>
+        <li><a href="./">Home</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        </ul>
       </nav>
     </header>
     <hr />
