--- a/week1/portfolio/projects.html
+++ b/week1/portfolio/projects.html
@@ -9,16 +9,18 @@
 </head>
 <body>
     <header>
-        <h1>Ismail's Portfolio</h1>
-        <nav>
-            </li><a href="./">Home</a>
-            </li><a href="./projects.html">Projects</a>
-            </li><a href="./contact.html">Contact</a>
-        </nav>
-        <hr>
+      <h1>personal portfolio</h1>
+      <nav>
+        <ul>
+        <li><a href="./">Home</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
+    <hr />
     <main>
-        <h1>My Projects</h1>
+        <h3>My Projects</h3>
         <p>Projects Index</p>
         <ul>
             <a href="#project-1">HTML Foundations</a></li>
