movie review page

--- a/week4/Movie-review/index.html
+++ b/week4/Movie-review/index.html
@@ -12,6 +12,8 @@
         <h1>🎬 Movie Review Page</h1>
         <p>Honest reviews of popular movies</p>
     </header>
+    <body id="top">
+
 
     <div class="container">
 
@@ -115,11 +117,28 @@
             </ul>
         </aside>
 
+
     </div>
 
     <footer>
-        <p>© 2025 Movie Review Page</p>
-    </footer>
+
+    <p>© 2025 Movie Review Page</p>
+    <a href="#">Home</a> |
+    <a href="#about">About</a> |
+    <a href="#contact">Contact</a>
+
+     <div class="footer-item">
+    📧 Email: <a href="ismailmahmood776@gmail.com">ismailmahmood776@gmail.com</a>
+  </div>
+  <div class="footer-item">
+    📞 Contact: <a href="tel:+923194127977">+92 319 412 7977</a>
+  </div>
+
+
+
+
+</footer>
+
 
 </body>
 </html>
