--- a/week4/Movie-review/index.html
+++ b/week4/Movie-review/index.html
@@ -101,10 +101,67 @@
                 <p>⭐ Rating: 7.3/10</p>
                 <p>The dark story of a man pushed too far by society.</p>
             </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 13.jpeg" alt="movie 13">
+                <h3>Doctor Strange</h3>
+                <p>⭐ Rating: 8.3/10</p>
+                <p>A surgeon enters the world of magic and time.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 14.jpg" alt="movie 14">
+                <h3>Iron Man</h3>
+                <p>⭐ Rating: 8/10</p>
+                <p>A billionaire builds a high-tech suit to become a hero the beginning of the Marvel Cinematic Universe.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 15.jpg" alt="movie 15">
+                <h3>The Lord of the Rings</h3>
+                <p>⭐ Rating: 7.5/10</p>
+                <p>The Fellowship of the Ring A quest to destroy a powerful ring An epic fantasy adventure.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 16.png" alt="movie 16">
+                <h3>Deadpool</h3>
+                <p>⭐ Rating: 6.5/10</p>
+                <p>A superhero with a sarcastic sense of humor Action-packed and wildly entertaining.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 17.jpg" alt="movie 17">
+                <h3>The Matrix</h3>
+                <p>⭐ Rating: 8.5/10</p>
+                <p>A hacker discovers the truth about reality A revolutionary sci-fi action film.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 18.jpg" alt="movie 18">
+                <h3>Gladitor</h3>
+                <p>⭐ Rating: 7.2/10</p>
+                <p>A Roman general seeks revenge after betrayal An epic tale of honor and courage.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 19.jpg" alt="movie 19">
+                <h3>Fight Club</h3>
+                <p>⭐ Rating: 5.5/10</p>
+                <p>An underground fight club changes lives A dark psychological film with a shocking twist.</p>
+            </div>
+
+            <div class="movie-card">
+                <img src="./images/movie 20.webp" alt="movie 20">
+                <h3>Jurassic Park</h3>
+                <p>⭐ Rating: 9/10</p>
+                <p>Dinosaurs are brought back to life through science and thrilling adventure filled with suspense.</p>
+            </div>
+
         </main>
 
         <aside>
-            <h2> Top Picks</h2>
+            <h2> Top Picks 🔥</h2>
             <ul>
                 <li>Avengers Endgame</li>
                 <li>Inception</li>
@@ -113,6 +170,7 @@
                 <li>The Dark Knight</li>
                 <li>The Shawshank Redemption</li>
                 <li>Extraction</li>
+                <li>Jurassic Park</li>
 
             </ul>
         </aside>
@@ -124,7 +182,7 @@
 
     <p>© 2025 Movie Review Page</p>
     <a href="#">Home</a> |
-    <a href="#about">About</a> |
+    <a href="#">About</a> |
     <a href="#contact">Contact</a>
 
      <div class="footer-item">
