--- a/week4/Movie-review/index.html
+++ b/week4/Movie-review/index.html
@@ -161,7 +161,7 @@
         </main>
 
         <aside>
-            <h2> Top Picks 🔥</h2>
+            <h2> Top Picks </h2>
             <ul>
                 <li>Avengers Endgame</li>
                 <li>Inception</li>
